add function delete

--- a/_src/templates/partials/_list_header.html
+++ b/_src/templates/partials/_list_header.html
@@ -12,7 +12,7 @@
     <div class="app-list-btns btn-group btn-group-sm">
       <button
         type="button"
-        class="btn btn-light text-muted border shadow-sm"
+        class="btn btn-light text-muted border shadow-sm deleteList"
         title="Borrar esta tarjeta"
       >
         <span class="fas fa-trash-alt"></span>
